# music-genre-classification

./: .gitignore  LICENSE  README.md  note.md  notebook.ipynb  pyproject.toml
.ipynb_checkpoints/: notebook-checkpoint.ipynb
data/: clap_features_medium.csv  clap_features_small.csv  cnn_medium.pt  cnn_small.pt  download_data.sh  mfcc_features.csv  mfcc_features_medium.csv  mfcc_features_small.csv  results.parquet
docs/: data-dictionary.md  fma-paper-info.md  improvement-ideas.md  model-card.md  overview.md  project-requirements.md  report.md
models/: cnn_medium.pt  cnn_medium_random.pt  cnn_medium_time.pt  cnn_small.pt  cnn_small_random.pt  cnn_small_time.pt
results/: results.parquet
scripts/: download-medium.sh  download_data.sh
