[project]
name = "music-genre-classification"
version = "0.1.0"
description = "Classify music tracks into genres and analyze which audio features are most discriminative. MFCC + classical ML baseline; CNN on spectrograms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "soundfile<0.13",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
